--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,18 @@
 {% load static %}
 
 {% block content %}
-<h1 class="display-4 text-success">Did it work???</h1>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-7 col-md-6 my-auto">
+                <h1 class="display-3 logo-font text-black">
+                    All your gaming needs
+                </h1>
+                <div>
+                    <h4>
+                        <a href="" class=""></a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
