home page content added

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="row">
+        <div class="col">
+            
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
@@ -8,9 +16,9 @@
                 <h1 class="display-3 logo-font text-black">
                     All your gaming needs
                 </h1>
-                <div>
+                <div class="my-5"> 
                     <h4>
-                        <a href="" class=""></a>
+                        <a href="" class="shop-button btn btn-lg rounded-0 py-3">Shop Now!</a>
                     </h4>
                 </div>
             </div>
