--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 {% block page_header %}
     <div class="row">
         <div class="col">
-            
+
         </div>
     </div>
 {% endblock %}
@@ -13,7 +13,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-3 logo-font text-black">
+                <h1 class="display-3 logo-font">
                     All your gaming needs
                 </h1>
                 <div class="my-5"> 
