--- a/templates/base.html
+++ b/templates/base.html
@@ -36,9 +36,7 @@
         <div class="row">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home'%}" class="nav-link main-logo-link">
-                    <h2 class="logo-font m-0">
-                        Game Hut
-                    </h2>
+                    <h2 class="logo-font my-0"> Game Hut </h2>
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -48,7 +46,7 @@
                         <div class="inpur-group-append">
                             <button class="form-control btn border rounded-0" type="submit">
                                 <span class="icon">
-                                    <i class="fas fa-search"></i>
+                                   <i class="fas fa-search"></i> 
                                 </span>
                             </button>
                         </div>
@@ -64,8 +62,33 @@
                                 <p class="my-0">My Account</p>
                             </div>
                         </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                <a href="" class="dropdown-item">Product Management</a>
+                                {% endif %}
+                                <a href="" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Sign Up</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}                           
+                        </div>
                     </li>
-                    <li class="list0inline-item"></li>
+                    <li class="list-inline-item">
+                        <a class="{% if sub_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link">
+                            <div class="text-center">
+                                <div><i class="fas fa-briefcase fa-lg"></i></div>
+                                <p class="my-0">
+                                    {% if sub_total %}
+                                        ${{ sub_total|floatformat:2 }}
+                                    {% else %}
+                                        €0.00
+                                    {% endif %}    
+                                </p>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
