--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
                 </h1>
                 <div class="my-5"> 
                     <h4>
-                        <a href="" class="shop-button btn btn-lg rounded-0 py-3">Shop Now!</a>
+                        <a href="" class="shop-button btn btn-black btn-lg rounded-0 py-3">Shop Now!</a>
                     </h4>
                 </div>
             </div>
