added main-nav.html, also added some css to compliment page as it changes from mobile to desktop

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,11 +2,13 @@
 {% load static %}
 
 {% block page_header %}
+<div class="container header-contianer">
     <div class="row">
         <div class="col">
 
         </div>
     </div>
+</div>    
 {% endblock %}
 
 {% block content %}
