--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,8 +24,24 @@ body {
     background-color: #151719;
 }
 
+.main-logo-link, .main-link {
+    color: #f7f1e3;
+}
+
+.mobile-button {
+    color: #151719;
+}
+
+.navbar-toggler-icon {
+}
+
+.nav-link {
+    color: #151719;
+}
+
 .logo-font {
     text-transform: uppercase;
+    
 }
 
 .main-logo-link {
