--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,10 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Shop
             </a>
-            <div class="droppdown-menu border-0" aria-labelledby="all-product-link">
+            <div class="dropdown-menu border-0" aria-labelledby="all-product-link">
                 <a href="#" class="dropdown-item">Games</a>
                 <a href="#" class="dropdown-item">Figures</a>
                 <a href="#" class="dropdown-item">Posters</a>
@@ -12,10 +12,10 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Gallery 
             </a>
-            <div class="droppdown-menu border-0" aria-labelledby="all-product-link">
+            <div class="dropdown-menu border-0" aria-labelledby="all-product-link">
                 <a href="#" class="dropdown-item">Games</a>
                 <a href="#" class="dropdown-item">Figures</a>
                 <a href="#" class="dropdown-item">Posters</a>
@@ -23,10 +23,10 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 About
             </a>
-            <div class="droppdown-menu border-0" aria-labelledby="all-product-link">
+            <div class="dropdown-menu border-0" aria-labelledby="all-product-link">
                 <a href="#" class="dropdown-item">Games</a>
                 <a href="#" class="dropdown-item">Figures</a>
                 <a href="#" class="dropdown-item">Posters</a>
