--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,7 +1,6 @@
-<ul>
     <li class="list-inline-item">
         <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="text-center">
+            <div class="mobile-button text-center">
                 <div><i class="fas fa-search fa-lg"></i></div>
                 <p class="my-0">Search</p> 
             </div>
@@ -23,7 +22,7 @@
     </li>    
         <li class="list-inline-item dropdown">
             <a class="nav-link text-black d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div class="text-center">
+                <div class="mobile-button text-center">
                     <div><i class="fas fa-user-tie fa-lg"></i></div>
                     <p class="my-0">My Account</p>
                 </div>
@@ -43,7 +42,7 @@
         </li>
         <li class="list-inline-item">
             <a class="{% if sub_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link d-block d-lg-none">
-                <div class="text-center">
+                <div class="mobile-button text-center">
                     <div><i class="fas fa-briefcase fa-lg"></i></div>
                     <p class="my-0">
                         {% if sub_total %}
@@ -54,5 +53,4 @@
                     </p>
                 </div>
             </a>
-        </li>
-    </ul>
+        </li>    
