--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,6 +4,7 @@ html {
 }
 
 body {
+    padding: 150px;
     background: url('/media/hero.png') no-repeat right center fixed;
     background-size: cover;
     background-size: 65%;
