--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,8 +12,9 @@
 {% endblock %}
 
 {% block content %}
+<div class="overlay"></div>
 <div class="container">
-    <div class="row">
+    <div class="row product-text">
         <div class="col">
             {{ products }}
         </div>
