--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
                 </h1>
                 <div class="my-5"> 
                     <h4>
-                        <a href="" class="shop-button btn btn-black btn-lg rounded-0 py-3">Shop Now!</a>
+                        <a href="{% url 'products' %}" class="shop-button btn btn-black btn-lg rounded-0 py-3">Shop Now!</a>
                     </h4>
                 </div>
             </div>
