--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
                 <a href="#" class="dropdown-item">Games</a>
                 <a href="#" class="dropdown-item">Figures</a>
                 <a href="#" class="dropdown-item">Posters</a>
-                <a href="#" class="dropdown-item">Shop Everything</a>
+                <a href="{% url 'products' %}" class="dropdown-item">Shop Everything</a>
             </div>
         </li>
         <li class="nav-item dropdown">
