--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -41,7 +41,7 @@
             </div>
         </li>
         <li class="list-inline-item">
-            <a class="{% if sub_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link d-block d-lg-none">
+            <a class="{% if sub_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
                 <div class="mobile-button text-center">
                     <div><i class="fas fa-briefcase fa-lg"></i></div>
                     <p class="my-0">
