--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if sub_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link">
+                        <a class="{% if sub_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-briefcase fa-lg"></i></div>
                                 <p class="my-0">
