--- a/templates/base.html
+++ b/templates/base.html
@@ -103,6 +103,11 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col delivery-banner">
+                <h4 class="logo-font my-1">Free delivery on all orders over ${{ free_delivery_threshold }}!</h4>
+            </div>
+        </div>
     </header>
 
     {% if messages %}
