added some css to the delivery banner to match website

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -107,6 +107,13 @@ a.category-badge > span.badge:hover {
     color: #fff !important
 }
 
+/* -------------------------------- Bag */
+
+.delivery-banner {
+    background-color: #151719;
+    color: #f7f1e3;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
