--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,6 +56,12 @@ body {
     min-width: 260px;
 }
 
+.btn-outline-black {
+    color: #f7f1e3 !important; 
+    background: #151719;
+    border: 1px solid #151719
+}
+
 .btn-black {
     background: #151719;
     color: white;
