added ability to update bag with quantity boxes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -104,6 +104,10 @@ a {
     z-index: -1;
 }
 
+.update-link, .remove-item {
+    cursor: pointer;
+}
+
 .product-bg {
     padding-bottom: 5px; 
 }
